--- a/src/Navber/MobileNav.css
+++ b/src/Navber/MobileNav.css
@@ -1,5 +1,5 @@
 :root {
-  --navBG: rgb(87, 0, 168);
+  --navBG: blueviolet;
 }
 .mobileNavber {
   background-color: var(--navBG);
@@ -10,7 +10,9 @@
   width: 100%;
 }
 .mobileNavber .div1 img {
-  width: 60px;
+  width: 70px;
+  margin-top: 7px;
+  margin-bottom: 9px;
 }
 .mobileNavber .div1 {
   width: 100%;
@@ -23,6 +25,7 @@
   width: 100%;
 }
 .mobileNavber .div1 .navLinks {
+  position: relative;
   display: block;
   background-color: rgb(67, 1, 129);
   padding-top: 20px;
@@ -31,10 +34,15 @@
   margin-bottom: -10px;
   width: 200%;
   border-top: 10px solid var(--navBG);
+  transition: 0.1s;
 }
 .mobileNavber .navLinksHide {
-  display: none;
-  transition: 1s;
+  position: absolute;
+  top: 100;
+  left: 0;
+  margin-top: 9px;
+  margin-left: -500px;
+  transition: none;
 }
 .mobileNavber .div1 span {
   color: white;
@@ -51,6 +59,10 @@
   border-radius: 4px;
 }
 .mobileNavber .NavLink:hover {
+  box-shadow: 0 0 5px whitesmoke;
+  background-color: rgb(101, 9, 187);
+}
+.mobileNavber .NavLink:focus {
   box-shadow: 0 0 5px whitesmoke;
   background-color: rgb(101, 9, 187);
 }
