--- a/src/Navber/MobileNav.css
+++ b/src/Navber/MobileNav.css
@@ -1,8 +1,8 @@
 :root {
-  --navBG: blueviolet;
+  --navBG: linear-gradient(to right, purple, blueviolet);
 }
 .mobileNavber {
-  background-color: var(--navBG);
+  background: var(--navBG);
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -18,7 +18,7 @@
   width: 100%;
 }
 .mobileNavber .navLink {
-  background-color: rgb(67, 1, 129);
+  background: linear-gradient(to right, purple, blueviolet);
   margin-left: 10px;
   margin-bottom: -10px;
   padding: 20px;
@@ -27,13 +27,12 @@
 .mobileNavber .div1 .navLinks {
   position: relative;
   display: block;
-  background-color: rgb(67, 1, 129);
+  background: linear-gradient(to right, purple, blueviolet);
   padding-top: 20px;
   padding-bottom: 20px;
   margin-left: -10px;
   margin-bottom: -10px;
   width: 200%;
-  border-top: 10px solid var(--navBG);
   transition: 0.1s;
 }
 .mobileNavber .navLinksHide {
