--- a/src/Navber/MobileNav.css
+++ b/src/Navber/MobileNav.css
@@ -18,7 +18,7 @@
   width: 100%;
 }
 .mobileNavber .navLink {
-  background: linear-gradient(to right, purple, blueviolet);
+  background: linear-gradient(to right, purple, blueviolet, purple);
   margin-left: 10px;
   margin-bottom: -10px;
   padding: 20px;
@@ -27,7 +27,7 @@
 .mobileNavber .div1 .navLinks {
   position: relative;
   display: block;
-  background: linear-gradient(to right, purple, blueviolet);
+  background: linear-gradient(to right, purple, blueviolet, purple);
   padding-top: 20px;
   padding-bottom: 20px;
   margin-left: -10px;
