--- a/src/components/Home/Style.css
+++ b/src/components/Home/Style.css
@@ -21,7 +21,7 @@
 /*  */ /*  */
 .HomePage .div2 {
   text-align: center;
-  background-color: whitesmoke;
+  background-color: white;
   width: 100%;
   display: flex;
   justify-content: center;
